On branch 5/tool/1/user modified:   electric/electric-java/com/sun/electric/tool/user/CircuitChanges.java modified:   electric/electric-java/com/sun/electric/tool/user/Clipboard.java modified:   electric/electric-java/com/sun/electric/tool/user/CompileVHDL.java modified:   electric/electric-java/com/sun/electric/tool/user/ErrorLogger.java modified:   electric/electric-java/com/sun/electric/tool/user/Highlight.java new file:   electric/electric-java/com/sun/electric/tool/user/HighlightArea.java new file:   electric/electric-java/com/sun/electric/tool/user/HighlightEOBJ.java new file:   electric/electric-java/com/sun/electric/tool/user/HighlightLine.java new file:   electric/electric-java/com/sun/electric/tool/user/HighlightObject.java new file:   electric/electric-java/com/sun/electric/tool/user/HighlightPoly.java new file:   electric/electric-java/com/sun/electric/tool/user/HighlightText.java modified:   electric/electric-java/com/sun/electric/tool/user/Highlighter.java modified:   electric/electric-java/com/sun/electric/tool/user/NetworkHighlighter.java modified:   electric/electric-java/com/sun/electric/tool/user/dialogs/options/GDSTab.java modified:   electric/electric-java/com/sun/electric/tool/user/menus/ToolMenu.java modified:   electric/electric-java/com/sun/electric/tool/user/tests/PrefTest.java modified:   electric/electric-java/com/sun/electric/tool/user/tests/TestMenu.java modified:   electric/electric-java/com/sun/electric/tool/user/ui/ExplorerTree.java modified:   electric/electric-java/com/sun/electric/tool/user/ui/ZoomAndPanListener.java